fix scroll on mobile and header on narrow

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .App {
